# Rosemary

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE.bazel
Mocks/: BUILD.bazel  City+Mock.swift  RosemaryMocks.h
Rosemary.xcodeproj/: project.pbxproj
RosemaryTests/: RosemaryTests.swift
Sources/: AppDelegate.swift  BUILD.bazel  SceneDelegate.swift  ViewController.swift
Sources/Base.lproj/: Main.storyboard
Sources/Models/: City.swift
Tests/: BUILD.bazel  FirstTests.swift  SecondTests.swift
UITests/: RosemaryUITests.swift
bazel/configs/: environments.bzl
bazel/rules/: substitutions.bzl
