load("@build_bazel_rules_apple//apple:ios.bzl", "ios_application")
load("//bazel/rules:substitutions.bzl", "substitutions")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

ROOT_MODULE_NAME = "Root"

swift_library(
    name = ROOT_MODULE_NAME,
    module_name = ROOT_MODULE_NAME,
    srcs = glob([
        "Sources/*.swift"
    ]),
    data = [
    	"Assets",
    	"Sources/Base.lproj/Main.storyboard",
    	"Sources/Base.lproj/LaunchScreen.storyboard",
    ],
    deps = []
)

filegroup(
    name = "Assets",
    srcs = glob(["Sources/Assets.xcassets/**"]),
    visibility = ["//visibility:public"],
)

substitutions(
  name = "InfoPlist",
  template = "Sources/Info.plist",
  output = "Rosemary-Info.plist",
  substitutions = {
    "$(PRODUCT_MODULE_NAME)": ROOT_MODULE_NAME,
  },
)

ios_application(
    name = "Rosemary",
    bundle_id = "com.khoitm.rosemary",
    bundle_name = "Rosemary",
    infoplists = ["InfoPlist"],
    families = ["iphone"],
    minimum_os_version = "13.0",
    deps = [
        ":%s" % ROOT_MODULE_NAME,
    ]
)
