load("@build_bazel_rules_apple//apple:ios.bzl", "ios_unit_test")
load("@build_bazel_rules_apple//apple/testing/default_runner:ios_test_runner.bzl", "ios_test_runner")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("@bazel//configs:environments.bzl", "ROOT_MODULE_NAME", "MOCK_MODULE_NAME", "TEST_MODULE_NAME")

swift_library(
    name = TEST_MODULE_NAME,
    srcs = glob([
        "**/*.swift"
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//Sources:%s" % ROOT_MODULE_NAME,
        "//Mocks:%s" % MOCK_MODULE_NAME,
    ]
)

ios_test_runner(
    name = "ios_x86_64_sim_runner",
    device_type = "iPhone 12",
    os_version = "14.5",
)

ios_unit_test(
    name = "RosemaryTests",
    deps = [
        ":%s" % TEST_MODULE_NAME,
    ],
    minimum_os_version = "13.0",
    runner = ":ios_x86_64_sim_runner",
    visibility = ["//visibility:public"]
)
